--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,7 +4,7 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -40,7 +40,7 @@
 }
 
 .title {
-  margin: 0;
+  margin: 0 0 24px;
   line-height: 1.15;
   font-size: 4rem;
 }
